# TFYSwiftSSRUilt

./: .cursorrules  LICENSE  Podfile  README.md  TFYSwiftSSRKit.podspec  module.modulemap
PacketSwift/: PacketSwift.entitlements  PacketTunnelProvider.swift
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.ac.orig  configure.ac.rej  configure.ac.rej.orig  libtool  shadowsocks-libev.pc  shadowsocks-libev.pc.in
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.1  traces.2  traces.3  traces.4
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libbloom/: Makefile  Makefile.in  libbloom.la  libbloom_la-bloom.lo
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libbloom/.deps/: libbloom_la-bloom.Plo
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/: Makefile  Makefile.am  Makefile.in  libcork.la
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/.libs/: libcork.lai
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/include/libcork/: config.h  core.h
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/include/libcork/config/: custom.h  gcc.h
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/include/libcork/core/: api.h  attributes.h  byte-order.h  container.h  gc.h  net-addresses.h  types.h
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/include/libcork/ds/: file-stream.h
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/include/libcork/posix/: env.h
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/include/libcork/threads/: atomics.h  basics.h
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/src/libcork/cli/: commands.lo
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/src/libcork/core/: allocator.lo  error.c  error.lo  gc.c  gc.lo  hash.lo  ip-address.c  ip-address.lo  libcork_la-allocator.lo  libcork_la-error.lo  libcork_la-gc.lo  libcork_la-hash.lo  libcork_la-mempool.lo  mempool.lo  timestamp.c  timestamp.lo  u128.c  u128.lo
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/src/libcork/ds/: array.lo  bitset.lo  buffer.c  buffer.lo  dllist.lo  file-stream.c  file-stream.lo  hash-table.c  hash-table.lo  libcork_la-array.lo  libcork_la-bitset.lo  libcork_la-buffer.lo  libcork_la-dllist.lo  libcork_la-hash-table.lo  libcork_la-managed-buffer.lo  libcork_la-ring-buffer.lo  managed-buffer.c  managed-buffer.lo  ring-buffer.lo  slice.lo
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/src/libcork/posix/: directory-walker.lo  env.c  env.lo  exec.lo  files.c  files.lo  libcork_la-directory-walker.lo  libcork_la-exec.lo  libcork_la-subprocess.lo  process.lo  subprocess.lo
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libcork/src/libcork/pthreads/: libcork_la-thread.lo  thread.c  thread.lo
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libipset/: Makefile  Makefile.am  Makefile.in  libipset.la
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libipset/include/ipset/: bits.h  ipset.h
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libipset/include/ipset/bdd/: nodes.h
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libipset/src/libipset/: general.c  general.lo
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/libipset/src/libipset/.deps/: general.Plo  libipset_la-general.Plo
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/src/: Makefile  Makefile.am  Makefile.am.orig  Makefile.am.rej.orig  Makefile.in  acl.c  acl.h  aead.c  crypto.c  libshadowsocks-libev.la  libshadowsocks_libev_la-acl.lo  libshadowsocks_libev_la-aead.lo  libshadowsocks_libev_la-base64.lo  libshadowsocks_libev_la-cache.lo  libshadowsocks_libev_la-crypto.lo  libshadowsocks_libev_la-jconf.lo  libshadowsocks_libev_la-json.lo  libshadowsocks_libev_la-local.lo  libshadowsocks_libev_la-netutils.lo  libshadowsocks_libev_la-plugin.lo  libshadowsocks_libev_la-ppbloom.lo  libshadowsocks_libev_la-rule.lo  libshadowsocks_libev_la-stream.lo  libshadowsocks_libev_la-udprelay.lo  libshadowsocks_libev_la-utils.lo  local.c  manager.c  manager.h  rule.c  rule.h  server.c  ss-local  ss-manager  ss-server  ss-tunnel  stream.c  tunnel.c
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/src/.deps/: libshadowsocks_libev_la-acl.Plo  libshadowsocks_libev_la-aead.Plo  libshadowsocks_libev_la-base64.Plo  libshadowsocks_libev_la-cache.Plo  libshadowsocks_libev_la-crypto.Plo  libshadowsocks_libev_la-jconf.Plo  libshadowsocks_libev_la-json.Plo  libshadowsocks_libev_la-local.Plo  libshadowsocks_libev_la-netutils.Plo  libshadowsocks_libev_la-plugin.Plo  libshadowsocks_libev_la-ppbloom.Plo  libshadowsocks_libev_la-rule.Plo  libshadowsocks_libev_la-stream.Plo  libshadowsocks_libev_la-udprelay.Plo  libshadowsocks_libev_la-utils.Plo  ss_local-acl.Po  ss_local-aead.Po  ss_local-base64.Po  ss_local-cache.Po  ss_local-crypto.Po  ss_local-jconf.Po  ss_local-json.Po  ss_local-local.Po  ss_local-netutils.Po  ss_local-plugin.Po  ss_local-ppbloom.Po  ss_local-rule.Po  ss_local-stream.Po  ss_local-udprelay.Po  ss_local-utils.Po  ss_manager-jconf.Po  ss_manager-json.Po  ss_manager-manager.Po  ss_manager-utils.Po  ss_server-acl.Po  ss_server-aead.Po  ss_server-base64.Po  ss_server-cache.Po  ss_server-crypto.Po  ss_server-jconf.Po  (+24 more)
TFYSwiftSSRKit/shadowsocks-libev/shadowsocks-libev-3.3.5/src/.libs/: libshadowsocks-libev.lai
TFYSwiftSSRKit/shadowsocks-rust/: Cargo.toml
TFYSwiftSSRKit/shadowsocks-rust/include/: TFYSSshadowsocksRust.h
TFYSwiftSSRKit/shadowsocks-rust/output/include/: ss.h
TFYSwiftSSRKit/shadowsocks-rust/output/include/module/: module.modulemap
TFYSwiftSSRKit/shadowsocks-rust/output/ios/: symbols.txt
TFYSwiftSSRKit/shadowsocks-rust/src/: exports.ld  full_config.json  lib.rs  local_config.json  server_config.json
(+282 files in other folders)
