[package]
name = "shadowsocks-rust"
version = "1.22.0"
edition = "2021"
authors = ["TFYSwiftSSRKit"]
description = "Shadowsocks Rust implementation for iOS/macOS"

[lib]
name = "ss"
crate-type = ["staticlib"]

[dependencies]
shadowsocks-rust = { version = "1.22.0", features = ["stream-cipher", "local-redir"] }
libc = { version = "0.2.155", features = ["extra_traits"] }
